# r8s

./: Cargo.toml  LICENSE  README.md  clippy.toml
crates/r8s/: Cargo.toml
crates/r8s-api/: Cargo.toml
crates/r8s-api/src/: auth.rs  bootstrap.rs  discovery.rs  handler.rs  lib.rs  openapi_v2.rs  openapi_v3.rs  params.rs  patch.rs  protobuf.rs  response.rs  scale.rs  server.rs  table.rs
crates/r8s-controllers/: Cargo.toml
crates/r8s-controllers/src/: certs.rs  crd.rs  cronjob.rs  daemonset.rs  deployment.rs  endpoints.rs  gc.rs  job.rs  lib.rs  manager.rs  namespace.rs  pod_admission.rs  replicaset.rs  serviceaccount.rs  statefulset.rs
crates/r8s-kubelet/: Cargo.toml
crates/r8s-kubelet/src/: lib.rs  probe.rs
crates/r8s-network/: Cargo.toml
crates/r8s-network/src/: bridge.rs  dns.rs  ingress.rs  lib.rs  proxy.rs
crates/r8s-runtime/: Cargo.toml
crates/r8s-runtime/src/: containerd.rs  lib.rs  log_pump.rs  mock.rs  traits.rs
crates/r8s-scheduler/: Cargo.toml
crates/r8s-scheduler/src/: lib.rs  scheduler.rs
crates/r8s-store/: Cargo.toml
crates/r8s-store/src/: backend.rs  error.rs  index.rs  lib.rs  revision.rs  watch.rs
crates/r8s-store/tests/: store_tests.rs
crates/r8s-tests/: Cargo.toml
crates/r8s-tests/src/: lib.rs
crates/r8s-tests/tests/: api.rs  crd.rs  cronjob.rs  daemonset.rs  deployment.rs  gc.rs  integration.rs  job.rs  kubelet.rs  lint.rs  multinamespace.rs  namespace.rs  pod_logs.rs  scheduler.rs  service.rs  statefulset.rs  volume.rs
crates/r8s-types/: Cargo.toml  build.rs
crates/r8s-types/src/: crd.rs  deployment.rs  endpoints.rs  endpointslice.rs  ingress.rs  ingressclass.rs  lib.rs  meta.rs  namespace.rs  node.rs  openapi.rs  openapi_proto.rs  pod.rs  registry.rs  replicaset.rs  resource.rs  service.rs  serviceaccount.rs  statefulset.rs
crates/r8s/src/: config.rs  helm.rs  main.rs
crates/r8sd/: Cargo.toml
crates/r8sd/src/: main.rs
scripts/: conformance-isolated.sh  conformance.sh  gen-k8s-descriptors.sh
