[package]
name = "r8s-api"
version.workspace = true
edition.workspace = true

[dependencies]
r8s-types.workspace = true
r8s-store.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
rustc-hash.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
k8s-openapi.workspace = true
chrono.workspace = true
