[package]
name = "r8s-api"
version.workspace = true
edition.workspace = true

[dependencies]
r8s-types.workspace = true
r8s-store.workspace = true

axum.workspace = true
rustc-hash.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
