[package]
name = "r8s-controllers"
version.workspace = true
edition.workspace = true

[dependencies]
r8s-types.workspace = true
r8s-store.workspace = true
k8s-openapi.workspace = true

tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true
rand.workspace = true
