[package]
name = "r8s-kubelet"
version.workspace = true
edition.workspace = true

[dependencies]
r8s-types.workspace = true
r8s-store.workspace = true
r8s-runtime.workspace = true
r8s-network.workspace = true

tokio.workspace = true
tokio-util.workspace = true
rustc-hash.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
