[package]
name = "r8s-network"
version.workspace = true
edition.workspace = true

[dependencies]
r8s-types.workspace = true
r8s-store.workspace = true

tokio.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
