[package]
name = "r8s-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
rustc-hash.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
containerd-client.workspace = true
oci-spec.workspace = true
prost-types.workspace = true
sha2.workspace = true
