[package]
name = "r8s-store"
version.workspace = true
edition.workspace = true

[dependencies]
r8s-types.workspace = true

redb.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
