[package]
name = "r8s-types"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
k8s-openapi.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build.workspace = true
