[package]
name = "r8s"
version.workspace = true
edition.workspace = true

[[bin]]
name = "r8s"
path = "src/main.rs"

[dependencies]
r8s-types.workspace = true

clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
